# STS2-Data-Collector

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 558d2f005730_initial.py  7a092709dc7b_add_unique_constraint_steam_profile_file.py  b1c4f0f8a912_add_normalized_run_tables.py
backend/app/: config.py
backend/app/adapters/postgres/: database.py  models.py  repository.py  stats_repository.py
backend/app/api/: dependencies.py  schemas.py
backend/app/api/routes/: health.py  public.py  runs.py  stats.py
backend/app/domain/: models.py  ports.py  runs.py  services.py  stats.py
backend/tests/: conftest.py  test_api.py  test_domain.py  test_public_api.py  test_schemas.py  test_stats_api.py
client/: Cargo.toml  README.md
client/src/: discovery.rs  main.rs  record.rs  retry.rs  state.rs  upload.rs  watcher.rs
client/src/tests/: mod.rs
frontend/: design_plan.md  index.html  pyproject.toml  serve.py
frontend/app/: __init__.py  config.py
frontend/app/routes/: dashboard.py
frontend/app/services/: api.py
frontend/app/static/css/: style.css
frontend/app/static/js/: main.js
frontend/app/templates/: base.html
frontend/app/templates/dashboard/: global.html  player.html
frontend/app/templates/partials/: card_table.html  (+5 more)
frontend/css/: styles.css
frontend/js/: api.js  app.js  utils.js
frontend/js/components/: settings.js
frontend/js/pages/: cards.js  characters.js  overview.js  relics.js
(+5 files in other folders)
